update all arena

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,38 @@
 cmake_minimum_required(VERSION 3.5)
+project(Arena VERSION 0.1)
+
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(CMAKE_THREAD_LIBS_INIT "-lpthread")
+set(CMAKE_HAVE_THREADS_LIBRARY 1)
+set(CMAKE_USE_WIN32_THREADS_INIT 0)
+set(CMAKE_USE_PTHREADS_INIT 1)
+set(THREADS_PREFER_PTHREAD_FLAG ON)
 
 set(OPTIMIZATIONS ON)
 
-project(Arena-mobi VERSION 0.1)
-
+# find package
 find_package(benchmark REQUIRED)
 
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
-
-set(CMAKE_CXX_FLAGS "-lbenchmark  -lpthread")
-
+set(CMAKE_CXX_FLAGS "")
 if(OPTIMIZATIONS)
-  set(CMAKE_CXX_FLAGS "-O2 -Os -fno-stack-protector -march=native -lbenchmark -lpthread")
+  set(CMAKE_CXX_FLAGS "-O2 -Os -fno-stack-protector -march=native")
 endif()
 
-add_library(Arena-mobi SHARED
+add_library(Arena SHARED
 
-        src/include/arena.cpp
-        src/include/arena.hpp
-        )
+  src/include/arena.cpp
+  src/include/arena.hpp
 
-add_executable(TestBenchMark src/TestBenchMark.cpp )
-target_link_libraries(TestBenchMark Arena-mobi)
+)
+
+# add executable benchmark
+include(GoogleTest)
+add_executable(arena_benchmark benchmark/benchmark.cpp)
+target_link_libraries(arena_benchmark benchmark::benchmark Arena)
+
+# add executable gtest
+add_definitions(-DUNIT_TESTS)
+add_executable(arena_test test/test.cpp)
+target_link_libraries(arena_test gtest gtest_main Arena)
